--- a/src/app/new-messages/app.component.scss
+++ b/src/app/new-messages/app.component.scss
@@ -14,10 +14,11 @@
         max-width: 580px;
         min-width: 232px;
         margin-left: 5px;
+        position: relative;
         float: right;
         background-color: white;
         box-shadow: 0px 5px 20px rgb(200, 200, 200);
-        z-index: 2;
+        z-index: 10;
 
         .template-header {
             height: 35px;
